Adds db and templateDir sections to configuration template

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,15 @@
+[db]
+dbPath=
+
 [ilog]
 serverURL=
 serverlogin=
 serverpassword=
 postman-token=
+
+[templateDir]
+questions=
+messages=
 
 [test]
 test_citizen_id=
