Abstracting config.ini template to unwire credentials

--- a/config.ini
+++ b/config.ini
@@ -2,10 +2,16 @@
 dbPath=
 
 [ilog]
+expcode=
 serverURL=
+dataURL=
 serverlogin=
 serverpassword=
 postman-token=
+
+[tui]
+tui_test_url=
+tui_url=
 
 [templateDir]
 questions=
